--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,18 @@
+@inbook{Chan2004,
+    address = {Berlin, Heidelberg},
+    author = {Chan, Kwok Ping and Chen, Tsong Yueh and Towey, Dave},
+    booktitle = {Reliable Software Technologies - Ada-Europe 2004: 9th Ada-Europe International Conference on Reliable Software Technologies, Palma de Mallorca, Spain, June 14-18, 2004. Proceedings},
+    doi = {10.1007/978-3-540-24841-5_16},
+    editor = {Llamos{\'{i}}, Albert and Strohmeier, Alfred},
+    isbn = {978-3-540-24841-5},
+    mendeley-groups = {Testing},
+    pages = {200--212},
+    publisher = {Springer Berlin Heidelberg},
+    title = {{Good Random Testing}},
+    url = {http://dx.doi.org/10.1007/978-3-540-24841-5{\_}16},
+    year = {2004}
+}
+
 @article{Solichah2013,
     abstract = {Business Process Model and Notation (BPMN) is a graphical representation and notation for modeling complex business processes in diagrams. A simple BPMN diagram is easier to understand by all of the business stakeholders than a complex one. It is also easier for the developers to implement the corresponding systems. Complexity metrics can measure the complexity of a diagram. Only a few BPMN complexity metrics are found in the literature as BPMN is a recent development. To propose a new BPMN complexity metric, it is important to find suitable software complexity metrics which can be further adapted to develop a complexity metric for BPMN. This research surveys the existing software complexity metrics and the existing BPMN complexity metrics (i.e. McCabe Cyclomatic Complexity, Control-flow Complexity, and Halstead-based Process Complexity Metrics) to compare their performance and suitability in measuring the complexity of BPMN diagrams. The BPMN diagrams of the business processes of two Enterprise Resource Planning (ERP) open-source systems (i.e. Compiere and Openbravo ERP systems) are used in this research. The metrics values obtained are compared with empirical application and code measurement values (i.e. number of form-fields, number of files of code, and number of classes) of the two open-source systems. This research finds that the Halstead-based Process Complexity that has been proposed in the literature is useful in measuring the data complexity of BPMN diagrams. This means that the Halstead-based Process Complexity can be further elaborated to produce a BPMN complexity measure.},
     author = {Solichah, Iis and Hamilton, Margaret and Mursanto, Petrus and Ryan, Caspar and Perepletchikov, Mikhail},
