--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -91,6 +91,12 @@
 \newcommand{\inputVector}{เวกเตอร์นำเข้า}
 \newcommand{\inputVectorEN}{Input vector}
 
+\newcommand{\CUT}{{\class}ภายใต้การทดสอบ}
+\newcommand{\CUTEN}{Class under test}
+
+\newcommand{\Path}{ทางเดิน}
+\newcommand{\PathEN}{Path}
+
 % - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
 % - - - - - - - - - - - - - - - - - - - -
