--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -144,7 +144,7 @@
 \textendash\ 9\ \textendash\ 10\ \textendash\ 11\ \textendash\ 12\ \textendash\ 13\ \textendash\ 14\ \textendash\ 21\ 
 \textendash\ 22\ \textendash\ 24 
 
-โดยมี{\TestPath} ดัง\tablename\ \tabpageref{tab:testPath}
+โดยมี{\it {\TestPath} (ฉ)} ที่เลือก ดัง\tablename\ \tabpageref{tab:testPath}
 
 \begin{table}[ht!]
     \centering
@@ -191,10 +191,10 @@
     \item[11:] \code{this.quiz.getQuizScore(student\_id) < 20} \label{itm:studentid}
 \end{enumerate}
 
-เมื่อนำเงื่อนไขทั้งหมดมาพิจารณาร่วมกันจะได้ว่า
+เมื่อนำเงื่อนไขทั้งหมดมาพิจารณาร่วมกันจะได้กรอบค่าของ{\it พารารมิเตอร์ที่น่าจะเป็นไปได้ (ช)} ดังตาราง
 \begin{table}[ht!]
     \centering
-    \caption{เงื่อนไขที่พบทั้งหมดบน{\TestPath}}
+    \caption{ค่าของพารามิเตอร์ที่น่าจะเป็นไปได้ (ช) ตามเงื่อนไขที่พบทั้งหมดบน{\TestPath}}
     \label{tab:caseIllustrate}
     \begin{tabular}{|l|c|c|}
         \hline
@@ -222,7 +222,7 @@
 สำหรับข้อมูลนำเข้าที่ไม่ปรากฎใน{\PredicateNode}บน{\TestPath}นั้นจะใช้การสุ่มค่าโดยใช้ค่าคงที่ที่ได้จากขั้นตอน {\bf ทำเหมืองข้อมูลค่าคงที่ (A)} 
 เป็นข้อมูลเบื้องต้นในการสุ่มค่า 
 
-กำหนดให้ค่าที่สุ่มได้ออกมาเป็นดัง \tabpageref{tab:GRTRandom}
+กำหนดให้ค่าที่สุ่ม{\it ข้อมูนำเข้าสำหรับ{\method} (ช)} ได้ออกมาเป็นดัง \tabpageref{tab:GRTRandom}
 
 \begin{table}[ht!]
     \centering
@@ -240,7 +240,8 @@
 \newpage
 \subsubsection{สร้างกรณีทดสอบ (5.4)}
 
-ในขั้นตอนนี้จะนำข้อมูลนำเข้าที่สร้างจากกระบวนการก่อนหน้ามาสร้างกรณีทดสอบสำหรับภาษาจาวา ดังตัวอย่างด้านล่าง
+ในขั้นตอนนี้จะนำข้อมูลนำเข้าที่สร้างจากกระบวนการก่อนหน้ามาสร้างกรณีทดสอบสำหรับภาษาจาวา โดยใส่ค่าคาดหวัง (บรรทัดที่ 7) 
+จะเกิดจากการสุ่มโดยอิงตามประเภทข้อมูลที่{\method}นั้นคืนค่า ดังตัวอย่างของกรณีทดสอบภายใน {\it ชุดทดสอบ (ฌ)} ด้านล่าง
 
 \begin{figure}[hbt!]
     \lstset{basicstyle=\small,style=thesiscodestyle}
@@ -251,7 +252,26 @@
 
 \subsection{การปรับค่าความคาดหวัง (6)}
 
+แนวทางการดำเนินงานในขั้นตอนนี้จะเป็นการปรับค่าข้อมูลที่อยู่ภายในกรณีทดสอบที่ได้รับโดยนักทดสอบซอฟต์แวร์ เพื่อให้กรณีทดสอบนั้นสอดคล้องกับการทำงานที่ควรจะเป็นของโปรแกรม
+มากที่สุด เนื่องจากการวิจัยครั้งนี้ยังไม่รองรับการวิเคราะห์ค่าผลลัพธ์ที่ได้จากการดำเนินงานของ{\method} ยกตัวอย่างเช่นกรณีทดสอบที่ได้จากขั้นตอนที่ 5.4 
+ดัง \figpageref{fig:junitGradingTest} เมื่อได้ปรับการปรับค่าความคาดหวังจากนักทดสอบซอฟต์แวร์แล้วจะได้เป็นดัง{\figpageref{fig:junitGradingTestRefined}
+ซึ่งในที่นี้นักทดสอบซอฟต์แวร์ได้ปรับค่าในบรรทัดที่ 5 โดยเปลี่ยนจาก \code{"IUUUSISS"} ให้เป็นค่า \code{"5873000021"} 
+และบรรทัดที่ 6 คือค่า \code{"lorem"} เป็นค่า \code{"U"} จะได้ตัวอย่างของ {\it กรณีทดสอบพร้อมใช้งาน (ญ)} ดังนี้
+
+\begin{figure}[hbt!]
+    \lstset{basicstyle=\small,style=thesiscodestyle}
+    \lstinputlisting[language=java]{methodology/SimpleGradingTest-Refined.java}
+    \caption{กรณีทดสอบที่สร้างขึ้นจากข้อมูลทดสอบที่ปรับค่าจากนักทดสอบซอฟต์แวร์แล้ว}
+    \label{fig:junitGradingTestRefined}
+\end{figure}
+
 \subsection{การทดสอบซอฟต์แวร์ (7)}
+
+แนวทางการดำเนินงานในขั้นตอนนี้จะรับ {\it ชุดกรณีทดสอบ (ญ)} เข้าทดสอบร่วมกับ{\sourcecode}ที่ผ่านการแทรกคำสั่ง (จ) จากฐานข้อมูล (A) 
+และรวบรวมข้อมูลที่เกิดจากชุดคำสั่งที่แทรกไว้ ซึ่งปรากฎขึ้นระหว่างการทดสอบเข้าไว้ด้วยกันเป็น {\it ผลลัพธ์การทดสอบซอฟต์แวร์ (ฎ)} 
+เพื่อใช้ตรวจสอบให้แน่ใจว่ากรณีทดสอบนั้นสามารถทดสอบ{\TestPath}ที่เลือกได้ 
 
 \subsection{เปรียบเทียบผลลัพธ์การดำเนินงาน (8)}
 
+ในขั้นตอนนี้จะรับ {\it ผลลัพธ์การทดสอบซอฟต์แวร์ (ฎ)} มาสร้างเส้นทางการทดสอบเทียบกับ{\TestPath}ที่ได้เลือกไว้ก่อนหน้านี้ 
+เพื่อให้แน่ใจได้ว่าชุดทดสอบที่สร้างขึ้นนั้นครอบคลุม{\scg}ตาม{\TestPath}ที่กำหนดไว้
