--- a/objective/objective.tex
+++ b/objective/objective.tex
@@ -1,2 +1,7 @@
 \section{วัตถุประสงค์ของงานวิจัย}
 
+\begin{enumerate}
+    \item ศึกษาและออกแบบแนวทางการสร้างการกรณีทดสอบจาก{\scg}สำหรับภาษาจาวา เพื่อสร้างกรณีทดสอบที่ครอบคลุม{\TestPath}ระหว่าง{\CUT} อย่างน้อย 1 เส้นทาง
+    \item สร้างข้อมูลทดสอบที่สอดคล้องกับ{\TestPath}ที่เลือก ด้วยวิธีการกำหนดกรอบค่าสำหรับการสุ่มข้อมูลนำเข้า
+\end{enumerate}
+
