--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -36,6 +36,11 @@
 
     \input{limitation/limitation}
 
+    \input{limitation/research-steps}
+
+    \input{limitation/benefits}
+
+    \clearpage
     % -------------------- 
     % References section
     % -------------------- 
