--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,12 +1,11 @@
 \section{ที่มาและความสำคัญ} 
 
 ในกระบวนการพัฒนาซอฟต์แวร์นั้น ขั้นตอนการทดสอบซอฟต์แวร์ถือเป็นช่วงที่ใช้ทรัพยากรในการดำเนินงานมากที่สุดกว่ากึ่งหนึ่งของทรัพยากรที่ใช้สำหรับพัฒนาซอฟต์แวร์ทั้งหมด 
-ทำให้เห็นได้ว่าการพัฒนาซอฟต์แวร์นั้นเป็นให้ความสำคัญต่อคุณภาพของซอฟต์แวร์เป็นอย่างมาก เพราะการทดสอบซอฟต์แวร์คือขั้นตอนที่ทำขึ้นเพื่อค้นหาข้อผิดพลาดที่อาจยังคงอยู่ในซอฟต์แวร์
-ที่อาจจังคงอยู่ภายในซอฟต์แวร์ \cite{Myers:2011:AST:983238} นอกจากนั้นแล้วยังเป็นกระบวนการที่ทำให้สามารถมั่นใจได้ถึงคุณภาพและประสิทธิภาพของซอฟต์แวร์ที่พัฒนาขึ้นด้วย[x]
+ทำให้เห็นได้ว่าการพัฒนาซอฟต์แวร์นั้นเป็นให้ความสำคัญต่อคุณภาพของซอฟต์แวร์เป็นอย่างมาก 
+เพราะการทดสอบซอฟต์แวร์คือขั้นตอนที่ทำขึ้นเพื่อค้นหาข้อผิดพลาดที่อาจยังคงอยู่ในซอฟต์แวร์ ที่อาจจังคงอยู่ภายในซอฟต์แวร์ \cite{Myers:2011:AST:983238} 
+นอกจากนั้นแล้วยังเป็นกระบวนการที่ทำให้สามารถมั่นใจได้ถึงคุณภาพและประสิทธิภาพของซอฟต์แวร์ที่พัฒนาขึ้นด้วย
 
-การค้นหาข้อผิดพลาดที่ปรากฎอยู่ภายในซอฟต์แวร์นั้น ก็จำเป็นจะต้องสร้างกรณีทดสอบให้ครอบคลุม{\sourcecode}ที่ได้พัฒนาขึ้นให้มากที่สุดเท่าที่จะเป็นไปได้ หลายงานวิจัย [x,x,x,x]
-
-
+% การค้นหาข้อผิดพลาดที่ปรากฎอยู่ภายในซอฟต์แวร์นั้น ก็จำเป็นจะต้องสร้างกรณีทดสอบให้ครอบคลุม{\sourcecode}ที่ได้พัฒนาขึ้นให้มากที่สุดเท่าที่จะเป็นไปได้ หลายงานวิจัย [x,x,x,x]
 
 % การทดสอบซอฟต์แวร์เป็นกระบวนการสำคัญในขั้นตอนการพัฒนาซอฟต์แวร์ เพื่อให้มั่นใจได้ว่าซอฟต์แวร์นั้นสามารถทำงานได้ถูกต้องตามที่กำหนดไว้ \cite{Luo2001} 
 % ทั้งยังเป็นขั้นตอนที่ใช้บุคลากร งบประมาณ และระยะเวลาโดยรวมแล้วกว่าครึ่งหนึ่งของทรัพยากรทั้งหมดที่ใช้ในกระบวนการพัฒนาซอฟต์แวร์ \cite{singh2011} 
@@ -16,6 +15,11 @@
 % โดยอาศัยการวิเคราะห์เส้นทางจาก{\scg} ({\scgEN}) ที่สร้างขึ้นจาก{\sourcecode} ซึ่งรับข้อมูลจาก{\Repository} 
 % โดยอาศัยการเก็บข้อมูลในช่วง{\RegressionTesting} ({\RegressionTestingEN}) โดยกรณีทดสอบนั้นครอบคลุมการเรียกใช้ระหว่างกัน
 % ตาม{\scg}ที่สร้างขึ้นจาก
+
+การพัฒนาโปรแกรมนั้นจะแยกส่วนประกอบของโปรแกรมออกเป็นส่วนย่อยเพื่อความสะดวกในการพัฒนา ซึ่งในขั้นตอนนี้จะใช้การทดสอบส่วนย่อย (Unit Test) 
+เพื่อหาข้อผิดพลาดที่อยู่โปรแกรม โดยจะจำลองการเชื่อมต่อกับส่วนอื่น ๆ ในรูปแบบของสตับ (Stub) และไดรเวอร์ (Drive) เพื่อจำกัดขอบเขตของการค้นหาข้อผิดพลาด
+หากแต่ในขั้นตอนผนวกรวม{\sourcecode}ของส่วนย่อยเข้าด้วยกันนั้น อาจจะพบข้อผิดพลาดที่เกิดขึ้นบน{\Path}ระหว่าง{\class}ที่อยู่ต่างส่วนย่อยได้
+
 งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}ของ{\softwareComponent}ที่นำมาทดสอบเพื่อประกอบเข้าด้วยกัน
 ในช่วงการ\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบ
 ที่มีน้ำหนักมากที่สุดจากเส้นทางทั้งหมดของ{\scg} ซึ่งได้จากการวิเคราะห์แบบสถิตของ{\sourcecode}ที่นำมาพิจารณา 
