--- a/limitation/limitation.tex
+++ b/limitation/limitation.tex
@@ -1,6 +1,16 @@
 \section{ขอบเขตงานวิจัย}
 
 \begin{enumerate}
-    \item รองรับเฉพาะโปรแกรมที่มีจำนวนของไซโคลเมทริกภายในคลาสรวมกันแล้วน้อยกว่าหรือเท่ากับ 15
-    \item ครอบคลุมโปรแกรมที่ทำงานเป็นลำดับ (Sequencial) เท่านั้น ยังไม่ครอบคลุมการทำงานของโปรแกรมที่ทำงานเป็นภาวะพร้อมกัน (Sequencial programming)
+    \item ข้อมูล{\scg}ที่สร้างขึ้นนั้นจะสนใจเฉพาะคลาสที่อยู่ภายในแพ็คเกจจาวา (Java package) ตามที่ผู้ใช้ระบุ 
+        โดยละเว้นชุดพัฒนามาตรฐานของภาษาจาวาและชุดคำสั่งภายนอก
+    \item รองรับข้อมูลนำเข้าประเภทตัวอักษร (มีชนิดข้อมูลเป็น String ในภาษาจาวา) ตัวเลข 
+        (มีชนิดข้อมูลเป็น byte, short, int, long, float และ double ในภาษาจาวา) และโครงสร้างข้อมูลจำกัดเขต (มีชนิดข้อมูลเป็น enum ในภาษาจาวา) 
+        ยังไม่รองรับประเภทข้อมูลเฉพาะที่สร้างขึ้นเอง
+    \item รองรับโปรแกรมประยุกต์ที่พัฒนาขึ้นเพื่อใช้งานบนเครื่องคอมพิวเตอร์ส่วนบุคคล และ{\sourcecode}พัฒนาขึ้นด้วยภาษาจาวา 
+        โดยไม่รวมถึงโปรแกรมประยุกต์ประเภทเว็บแอปพลิเคชัน
+    \item ครอบคลุมโปรแกรมที่ทำงานเป็นลำดับ (Sequencial) ไม่ครอบคลุมการทำงานของโปรแกรมที่ทำงานเป็นภาวะพร้อมกัน (Sequencial programming)
+    \item รองรับเฉพาะโปรแกรมที่มีจำนวนของไซโคลเมทิกภายในคลาสรวมกันแล้วน้อยกว่าหรือเท่ากับ 15
+    \item รองรับการสร้างกรณีทดสอบที่สอดคล้องตามรูปแบบของชุดพัฒนา JUnit
+    \item รองรับการดำเนินงานแบบวงวน (Loop) มากที่สุด 2 รอบ
+    \item ไม่รองรับการเรียกใช้ฟังก์ชันเวียนบังเกิด (Recursion)
 \end{enumerate}
