--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -24,5 +24,6 @@
 ในช่วงการ\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบ
 ที่มีน้ำหนักมากที่สุดจากเส้นทางทั้งหมดของ{\scg} ซึ่งได้จากการวิเคราะห์แบบสถิตของ{\sourcecode}ที่นำมาพิจารณา 
 โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่ ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล 
-เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} ร่วมกันเพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าที่สอดคล้องกับ{\MethodSignature}ที่ต้องการทดสอบ
+เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
+ร่วมกันเพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าที่สอดคล้องกับ\FirstTimeDefine{\MethodSignature}{\MethodSignatureEN}ที่ต้องการทดสอบ
 
