--- a/limitation/limitation.tex
+++ b/limitation/limitation.tex
@@ -7,7 +7,7 @@
         (มีชนิดข้อมูลเป็น byte, short, int, long, float และ double ในภาษาจาวา) และโครงสร้างข้อมูลจำกัดเขต (มีชนิดข้อมูลเป็น enum ในภาษาจาวา) 
         ยังไม่รองรับประเภทข้อมูลเฉพาะที่สร้างขึ้นเอง
     \item รองรับโปรแกรมประยุกต์ที่พัฒนาขึ้นเพื่อใช้งานบนเครื่องคอมพิวเตอร์ส่วนบุคคล และ{\sourcecode}พัฒนาขึ้นด้วยภาษาจาวา 
-        โดยไม่รวมถึงโปรแกรมประยุกต์ประเภทเว็บแอปพลิเคชัน
+        % โดยไม่รวมถึงโปรแกรมประยุกต์ประเภทเว็บแอปพลิเคชัน
     \item ครอบคลุมโปรแกรมที่ทำงานเป็นลำดับ (Sequencial) ไม่ครอบคลุมการทำงานของโปรแกรมที่ทำงานเป็นภาวะพร้อมกัน (Sequencial programming)
     \item รองรับเฉพาะโปรแกรมที่มีจำนวนของไซโคลเมทิกภายในคลาสรวมกันแล้วน้อยกว่าหรือเท่ากับ 15
     \item รองรับการสร้างกรณีทดสอบที่สอดคล้องตามรูปแบบของชุดพัฒนา JUnit
