--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -8,20 +8,31 @@
 งานวิจัยชิ้นนี้ได้นำเสนอวิธีการจัดเรียงกรณีทดสอบด้วยแนวทาง \emph{"JUnit test case Prioritization Techniques operating in the Absence of coverage information (JUPTA)"} 
 โดยอาศัยการวิเคราะห์ข้อมูล{\scg}ที่สร้างขึ้นจากกรณีทดสอบ และโปรแกรมภายใต้การทดสอบเพื่อประมาณค่าความสามารถที่กรณีทดสอบนั้นสามารถครอบคลุม{\sourcecode}ได้
 ทั้งนี้เพื่อเป็นการพิสูจน์แนวคิดที่ผู้วิจัยพบว่าวิธีการจัดเรียงกรณีทดสอบโดยส่วนใหญ่ที่ทราบจากการทบทวนวรรณกรรมนั้น จะใช้ข้อมูลเชิงพลวัต (Dynamic information)
-ที่ได้จาการทดสอบ{\sourcecode}ในแต่ละครั้ง เข้ามาช่วยวิเคราะห์ลำดับของกรณีทดสอบในครั้งถัดไป พบว่าข้อมูลที่ได้นั้นอาจจะเป็นข้อมูลที่ล้าหลังไปจาก{\sourcecode} 
-หรือชุดกรณีทดสอบที่สร้างขึ้นมาใหม่เพือทดสอบในรอบปัจจุบัน 
+ที่ได้จากการทดสอบ{\sourcecode}ในแต่ละครั้ง เข้ามาช่วยวิเคราะห์ลำดับของกรณีทดสอบในครั้งถัดไป พบว่าข้อมูลที่ได้นั้นอาจจะเป็นข้อมูลที่ล้าหลังไปจาก{\sourcecode} 
+หรือชุดกรณีทดสอบที่สร้างขึ้นมาใหม่เพื่อทดสอบในรอบปัจจุบัน 
 
 ผลการทดสอบทางสถิติของการจัดเรียงกรณีทดสอบด้วยแนวคิด JUPTA ด้วยการจัดเรียงกรณีทดสอบของโปรแกรมภาษาจาวาทั้ง 4 โปรแกรม ที่มีขนาดใกล้เคียงกัน
 รวมกว่า 19 รุ่นนั้นพบว่า กรณีทดสอบที่จัดเรียงด้วยแนวคิด JUPTA นั้นมีประสิทธิภาพในการค้นหาข้อผิดพลาดมากกว่าการจัดเรียงกรณีทดสอบแบบสุ่มหรือไม่มีการจัดเรียงใด ๆ 
 และมีประสิทธิภาพในการค้นหาข้อผิดพลาดใกล้เคียงกันกับชุดกรณีทดสอบ จัดเรียงโดยอาศัยข้อมูลเชิงพลวัตประกอบการพิจารณา
 
 % - - - - - - - - - - - - - - - - - - - -
-\subsection{GRT: Program-analysis-guided random testing \cite{Ma2016}}
-วิธีการสร้างกรอบข้อมูล เพื่อช่วยให้การสร้างข้อมูลทดสอบทำได้ง่ายมากยิ่งขึ้น
+\subsection{งานวิจัย "GRT: Program-analysis-guided random testing" \cite{Ma2016}}
+
+งานวิจัยชิ้นนี้ได้นำเสนอกระบวนการปรับปรุงการสุ่มค่าที่จากเดิมนั้นจะสุ่มค่าแบบไร้ทิศทาง หรือกำหนดกรอบการสุ่มข้อมูลนำเข้าไว้อย่างกว้าง ๆ 
+ทำให้ค่าข้อมูลนำเข้าที่สุ่มได้นั้นมีโอกาสที่จะค้นพบข้อผิดพลาดภายในโปรแกรมได้น้อย งานวิจัยชิ้นนี้จึงได้เสนอแนวทางการนำข้อมูลที่จาก{\sourcecode} ของ
+ซอฟต์แวร์ภายใต้การทดสอบเข้ามาร่วมพิจารณา โดยจัดเก็บค่าคงที่ ที่ใช้งานโดยทั่วไป (Global) ภายใน{\sourcecode} เข้าร่วมพิจารณา 
+
+ซึ่งกระบวนการนั้นจะประกอบไปด้วยการจัดเก็บข้อมูลจาก{\sourcecode} และข้อมูลที่ได้จากการสั่งดำเนินการร่วมกัน ซึ่งให้ผลว่าสามารถสร้างกรอบการสุ่มค่าเพื่อช่วยให้
+ได้ข้อมูลนำเข้าที่สามารถค้นพบข้อผิดพลาดภายในชุดข้อมูลตัวอย่างได้มากขึ้น เมื่อเทียบกับวิธีการสุ่มข้อมูลแบบเดิม
 
 % - - - - - - - - - - - - - - - - - - - -
-\subsection{Eclat: Automatic Generation and Classification of Test Inputs \cite{Heaton2000}}
+\subsection{งานวิจัย "Eclat: Automatic Generation and Classification of Test Inputs" \cite{Heaton2000}}
 
-% - - - - - - - - - - - - - - - - - - - -
-\subsection{Automatic generation and classification of test inputs \cite{Pacheco2005}}
-การสร้างกลุ่มของกรณีทดสอบอย่างอัตโนมัติ ช่วยในการสร้างกรณีทดสอบ
+เนื่องจากการข้อมูลที่จะนำมาทดสอบนั้นมีขนาดใหญ่ ดังนั้นงานวิจัยนี้จึงเสนอแนวทางในการวิเคราะห์เพื่อหาซับเซตของข้อมูลนำเข้าทั้งหมดที่สามารถค้นพบข้อผิดพลาด
+ของซอฟต์แวร์ภายใต้การทดสอบได้ ซึ่งงานวิจัยได้นำเสนอวิธีการเลือกกลุ่มข้อมูลนำเข้าโดยพิจารณาจากส่วนย่อยของซอฟต์แวร์ 
+ประกอบกับชุดข้อมูลที่ทำให้โปรแกรมทำงานได้ถูกต้อง ซึ่งผลลัพธ์ที่ทดลองกับกลุ่มตัวอย่างได้พบว่าวิธีการนี้สามารถลดชุดข้อมูลนำเข้าที่ใช้ทดสอบได้
+โดยยังมีประสิทธิภาพในการค้นหาข้อผิดพลาดไม่ต่างไปจากเดิม
+
+% % - - - - - - - - - - - - - - - - - - - -
+% \subsection{งานวิจัย "Automatic generation and classification of test inputs" \cite{Pacheco2005}}
+% การสร้างกลุ่มของกรณีทดสอบอย่างอัตโนมัติ ช่วยในการสร้างกรณีทดสอบ
