--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -49,7 +49,7 @@
 \newcommand{\attribute}{แอททริบิวต์}
 \newcommand{\attributeEN}{Attribute}
 
-\newcommand{\MethodSignature}{Method signature}
+\newcommand{\MethodSignature}{ลายเซ็นของเมธอด}
 \newcommand{\MethodSignatureEN}{Method signature}
 
 \newcommand{\DirectedMultiGraph}{กราฟหลายทางมีทิศทาง}
@@ -107,8 +107,8 @@
 \newcommand{\curriculumn}{วิทยาศาสตร์มหาบัณฑิต}
 \newcommand{\major}{วิศวกรรมซอฟต์แวร์}
 \newcommand{\department}{วิศวกรรมคอมพิวเตอร์}
-\newcommand{\faculty}{วิศวกรรม}
-\newcommand{\address}{สถานที่ติดต่อ}
+\newcommand{\faculty}{วิศวกรรมศาสตร์}
+\newcommand{\address}{17/8 หมู่ 18 ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120}
 \newcommand{\telephone}{0861-629-9905}
 \newcommand{\emailaddress}{sitdhibong.l@student.chula.ac.th}
 \newcommand{\advisor}{รศ.ดร.ธาราทิพย์ สุวรรณศาสตร์}
